frontend/src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@import '@styles/variables.scss';

:root {
    --green-light-rgb: rgb(214, 229, 227);
    --green-light: #d6e5e3;
    --green-dark-rgb: rgb(0, 115, 112);
    --green-dark: #007370;

    --black: #000000;
    --white: #fffffa;

    --red: #d54444;

    //old dont use
    --gray-light: #f2f5f4;
    --gray-2: #d6d6d6;
    --gray-3: #707070;
    --gray-dark: rgb(58, 58, 58);
}

body {
    height: 100vh;
}

h1 {
    font-family: $font-family-headline;
    font-style: normal;
    font-size: 100px;
    color: var(--black);
}

.h2 {
    font-family: $font-family-headline;
    font-weight: 400;
    font-style: normal;
    font-size: 80px;
    color: var(--black);
}

.h2-white {
    @extend .h2;
    color: var(--white);
}

h2 {
    @extend .h2;
}

h3 {
    font-family: $font-family-headline;
    font-style: normal;
    font-size: 50px;
    color: var(--black);
}

h4 {
    font-family: $font-family-headline;
    font-style: normal;
    font-size: 40px;
    color: var(--black);
}

h5 {
    font-family: $font-family-headline;
    font-style: normal;
    font-size: 25px;
    color: var(--black);
}

.p {
    font-family: $font-family-text;
    font-style: normal;
    font-size: 25px;
}
.p-white {
    @extend .p;
    font-size: 16px;
    color: var(--white);
}

p {
    @extend .p;
    color: var(--black);
}

.text-input-wrapper {
    display: flex;
    flex-direction: column;

    label {
        margin-bottom: 0.25rem;
    }

    input {
        border: 3px solid var(--green-dark);
        border-radius: 15px;
        padding: 0rem 0.75rem;
        height: 50px;

        &:focus {
            outline: unset;
        }
    }
}

.btn {
    border-radius: 60px;
    padding: 0.5rem 1.5rem;
    width: fit-content;
}

.btn-primary {
    @extend .btn;
    color: var(--white);
    background-color: var(--green-dark);
}

.btn-secondary {
    @extend .btn;
    color: var(--white);
    border: 1px solid var(--white);
    background-color: inherit;
}

.btn-submit {
}

